[package]
name = "srcset"
version = "1.4.0"
authors = ["A Boston"]
description = "A tool that generates multiple images used in responsive web and mobile sites and apps."
edition = "2021"
readme = "README.md"
repository = "https://github.com/adrianboston/srcset"
keywords = ["cli", "image", "responsive-images", "mobile-web"]
categories = ["command-line-utilities"]

[dependencies]

argparse = "0.2.2"
image = {version =  "0.24.6", features = ["webp-encoder"]}
rayon = "1.5"
regex = "1"
lazy_static = "1.4.0"
anyhow = "1.0"

# print stuff
human_bytes = "0.3.0"
yansi = "0.5.0"

# image formats

[features]
default = ["jpeg", "png", "tiff", "gif", "webp", "webp-encoder"]

bmp = []
gif = []
hdr = []
ico = []
jpeg = []
png = []
pnm = []
tga = []
dds = []
tiff = []
webp = []
webp-encoder = []
farbfeld = []
avif-encoder = []


